tests/m1/negative/type_alias_cycle.ax
module type_alias_cycle;

type A = B;
type B = A;

fn main() -> i32 {
    let value: A = 0;
    return value;
}
